# Gstreamer-Command-Line-Player

./: CMakeLists.txt  commandlineparser.cpp  commandlineparser.h  gplay.cpp  gplay.h  gstreamer_inspect.c  keysdelegate.cpp  keysdelegate.h  main.cpp  playbin.cpp  playbin.h  playlist.cpp  playlist.h  taglistdelegate.cpp  taglistdelegate.h
